# ml-sales-prediction

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  .synk  .synk.yml  Dockerfile  Dockerfile.lambda  Dockerfile.lambda.local  Dockerfile.lambda.prod  Dockerfile.lambda.production  README.md  app.py  buildspec.yml  codebuild-permissions.json  dvc.yaml  ml-sales-trust-policy.json  params.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docker.txt
.dvc/: config
.github/workflows/: build_test.yml  deploy.yml  run_tests.yml
data/: .gitignore  processed_df_85123A.parquet.dvc  x_test_df_85123A.parquet.dvc  x_train_df_85123A.parquet  x_val_df_85123A.parquet  y_test_df_85123A.parquet  y_train_df_85123A.parquet  y_val_df_85123A.parquet
data/processed/: .gitignore  processed_df.csv.dvc
data/raw/: online_retail.csv.dvc
metrics/: .gitignore  dfn_risk_fairness_85123A.json  inf_85123A.json  val_85123A.json
models/production/: .gitignore  dfn_best_85123A.pth.dvc
notebooks/: exp_v1.ipynb  exp_v2.ipynb  exp_v3.ipynb  feature_engineering.ipynb
preprocessors/: .gitignore
reports/: .gitignore
src/: main.py  main_stockcode.py  prefect_flows.py  retrain_script.py
src/_utils/: __init__.py  _create_hist_df.py  handle_files.py  log.py  s3.py
src/data_handling/: __init__.py  etl_pipeline.py  main.py  prefect_flow.py  prefect_flows.py  preprocess.py  report_data_drift.py
src/data_handling/scripts/: __init__.py  extracting.py  feature_engineering.py  imputation.py  loading.py  (+4 more)
tests/: app_test.py  conftest.py  main_test.py
(+24 files in other folders)
